<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/texto_1"
        android:minHeight="48dp"
        android:inputType="text"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText1"
        android:layout_marginTop="8dp"
        android:hint="@string/texto_2"
        android:minHeight="48dp"
        android:inputType="text"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/compareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText2"
        android:layout_marginTop="16dp"
        android:text="@string/texto_comparar"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/compareButton"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>